--- a/wp-app/package.json
+++ b/wp-app/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "better-sqlite3": "^8.4.0",
     "classnames": "^2.3.2",
+    "fs": "^0.0.1-security",
     "jimp": "^0.22.8",
     "next": "13.4.7",
     "postcss": "8.4.24",
