--- a/wp-app/package.json
+++ b/wp-app/package.json
@@ -19,7 +19,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sqlite-sync": "^0.3.9",
+    "sqlite-sync-itf": "^0.0.1",
     "sqlite3": "^5.1.6",
     "tailwindcss": "3.3.2",
     "tesseract.js": "^4.1.1"
