--- a/wp-app/package.json
+++ b/wp-app/package.json
@@ -21,6 +21,7 @@
     "jimp": "^0.22.8",
     "moment": "^2.29.4",
     "next": "13.4.7",
+    "path": "^0.12.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
